base module setup

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,17 @@
 </head>
 
 <body>
-
+  <div class="hero">
+    <div class="flex justify-between p-10">
+      <nav>
+        <ul class="flex gap-5">
+          <li>Home</li>
+          <li>Vehicles</li>
+        </ul>
+      </nav>
+      <div class="logo">Logo</div>
+    </div>
+  </div>
 </body>
 
 </html>
